--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
 
     <title>React App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <script src="./src/index.js" type="text/jsx"></script>
