--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>React App</title>
   </head>
   <body>
+    <link rel="stylesheet" href="./src/index.css" />
     <script src="./src/index.js" type="text/jsx"></script>
     <div id="root"></div>
   </body>
